--- a/css/main.css
+++ b/css/main.css
@@ -21,12 +21,6 @@ a{
 ul{
     list-style-type: none;
 }
-.stretch_it{
-    white-space: nowrap;
-}
-.justify{
-    text-align:justify;
-}
 
 
 /* Loader */
@@ -46,6 +40,7 @@ nav{
 }
 nav .brand{
     flex-basis: 20%;
+    color: --var(rouge);
 }
 nav ul{
     display: flex;
@@ -63,10 +58,10 @@ nav ul li a{
     /* color: #fff; */
     transition: .3s ease;
 }
-.nav a:active{
+nav ul li a:active{
 
 }
-.nav a:hover{
+nav ul li a:hover{
     color: red;
     /* background-color: red; */
     transform:translate(-2%, 10%);
@@ -104,7 +99,7 @@ nav ul li a{
 	background-size: cover;
 	animation: left2 20s infinite;
 	left: 100%;
-	
+
 }
 #slide3 {
 	background: transparent url("../img/cleanin-products.jpg") no-repeat center;
@@ -155,7 +150,7 @@ nav ul li a{
   color: white;
   padding: 20px;
   transition: all ease;
-} 
+}
 .caption p{
 
 }
@@ -177,7 +172,7 @@ nav ul li a{
     transition: all 0.5;
 }
 .service-wrapper:hover{
- 
+
 }
 .pack{
     position: relative;
