--- a/css/main.css
+++ b/css/main.css
@@ -138,6 +138,9 @@ nav ul li a:hover{
     height: 100%;
     background-color: rgba(0,0,0,0.1);
 }
+.overlay1{
+    background-color: rgba(0,0,0,.3);
+}
 .caption{
   position: relative;
   height: 30%;
