--- a/css/main.css
+++ b/css/main.css
@@ -302,9 +302,9 @@ form textarea{
     display: inline-block;
     border: none;
     text-align: center;
-    font-size: 28px;
-    padding: 20px;
-    width: 200px;
+    font-size: 1.3em;
+    padding: 10px;
+    width: 10%;
     margin: 5px;
     border-radius: 5px;
     transition: all .5s;
@@ -319,7 +319,7 @@ form textarea{
     content: "\00bb";
     position: absolute;
     top: 0;
-    right:-20px;
+    right:-10px;
     opacity: 0;
     transition: .5s;
 }
@@ -333,6 +333,7 @@ form textarea{
 
 footer{
     background-color: var(--rouge);
+    margin-top: 50px;
     text-align: center;
     padding: 20px;
 }
