--- a/css/main.css
+++ b/css/main.css
@@ -280,7 +280,7 @@ nav ul li a:hover{
 }
 .contact-pad li span{
     margin-left: 1em;
-    font-weight: 400;
+    font-weight: bold;
 }
 .form-group{
 
