--- a/css/main.css
+++ b/css/main.css
@@ -286,7 +286,10 @@ nav ul li a:hover{
 .contact-pad li i{
     flex-basis: 10%;
 }
-.contact-pad li span{
+.contact-pad li .next-icon{
+    flex-basis: 30%;
+}
+.contact-pad li .bold{
     font-weight: bold;
 }
 .form-group{
