--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,12 @@
     /* font-family: 'Playfair Display', serif; */
     /* font-family: 'Lobster', cursive; */
 }
+html{
+    margin: 0;
+}
+body{
+    padding: 0 10px;
+}
 a{
     text-decoration: none;
 }
@@ -320,6 +326,10 @@ input:hover, textarea:hover{
     border: 2px solid red;
     transform: scale(1.05);
 }
+input:focus, textarea:focus{
+    border: 2px solid blue;
+    transform: scale(1.02);
+}
 .form-group textarea{
     flex-basis: 100%;
     height: 50px;
@@ -367,5 +377,6 @@ footer{
     background-color: var(--rouge);
     margin-top: 50px;
     text-align: center;
+    font-weight: bold;
     padding: 20px;
 }
