--- a/css/main.css
+++ b/css/main.css
@@ -196,10 +196,10 @@ ul li a:hover{
 
 }
 #pack1{
-    background-image: url('../img/art-creative-flying-17679.jpg');
+    background-image: url('../img/printer.jpg');
 }
 #pack2{
-    background-image: url('../img/arts-build-close-up-273230.jpg');
+    background-image: url('../img/camera.jpeg');
 }
 #pack3{
     background-image: url('../img/black-and-white-books-business-251225.jpg');
@@ -208,10 +208,10 @@ ul li a:hover{
     background-image: url('../img/clean-cleaning-mop-48889.jpg');
 }
 #pack5{
-    background-image: url('../img/cleanin-products.jpg');
+    background-image: url('../img/machine.jpg');
 }
 #pack6{
-    background-image: url('../img/bucket-building-cleaning-756883.jpg');
+    background-image: url('../img/mur.jpg');
 }
 /* .pack img{
     display: block;
