--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,7 @@
 }
 *{
     box-sizing: border-box;
-    font-family: 'Lato', sans-serif;
+    font-family: Helvetica,'Lato', sans-serif;
     /* font-family: 'Open Sans Condensed', sans-serif; */
     /* font-family: 'Playfair Display', serif; */
     /* font-family: 'Lobster', cursive; */
@@ -59,7 +59,7 @@ nav ul{
 
 ul li a{
     width: 20%;
-    font-family: 'Bree Serif', sans-serif;
+    font-family: Helvetica, sans-serif;
     font-size: 1em;
     /*font-weight: bold;*/
     color: #222;
@@ -69,7 +69,7 @@ ul li a{
 }
 ul li a:hover{
     color: red;
-    transform: scale(1.1);
+    /*transform: scale(1.1);*/
 }
 
 /* INDEX PAGE SLIDERS */
