--- a/css/main.css
+++ b/css/main.css
@@ -64,14 +64,14 @@ nav ul li a{
     width: 20%;
     font-family: Helvetica, sans-serif;
     font-size: 1em;
-    /*font-weight: bold;*/
+    font-weight: bold;
     color: #222;
     text-transform: uppercase;
     /* color: #fff; */
     transition: .1s ease;
 }
 nav ul li a:hover{
-    color: red;
+    color: blue;
     /*transform: scale(1.1);*/
 }
 
@@ -264,9 +264,7 @@ nav ul li a:hover{
 } */
 
 /* ****Contact**** */
-.map{
 
-}
 .map iframe{
     width: 100%;
     height: 500px;
@@ -320,11 +318,15 @@ nav ul li a:hover{
 }
 .form-group input, textarea{
     border-radius: 3px;
-    border: 1px solid var(--gris);
+    border: 1px solid white;
     padding: 2px 5px;
     height: 30px;
     margin: 5px 0;
     transition: all .2s ease;
+    background: transparent;
+}
+.form-group input::placeholder, textarea::placeholder{
+    color: white;
 }
 input:hover, textarea:hover{
     border: 2px solid red;
@@ -379,7 +381,6 @@ input:focus, textarea:focus{
 
 footer{
     margin-top: 50px;
-    height: 600px;
     color: white;
     text-align: center;
     font-weight: bold;
