--- a/css/main.css
+++ b/css/main.css
@@ -39,6 +39,7 @@ ul{
     right: 0;
     bottom: 0;
     left: 0;
+    padding-top: 50px;
     text-align: center;
     width: 100%;
     height: 100%;
