--- a/css/main.css
+++ b/css/main.css
@@ -30,6 +30,7 @@ ul{
 }
 .rouge{
     color: var(--rouge);
+    text-align:center;
 }
 /* Warning */
 /* Loader */
@@ -46,10 +47,21 @@ ul{
     z-index: 777;
     background: center no-repeat #fff;
 }
+.upper{
+    text-transform: uppercase;
+}
+.white-bg{
+    text-align: center;
+    padding: 80px 0;
+    background-image: url('../img/bg-white.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;"
+}
 nav{
     display: flex;
     justify-content: space-around;
     align-items: center;
+    background-color: rgba(0,0,0,.01);
 }
 nav .brand{
     flex-basis: 20%;
@@ -72,7 +84,7 @@ nav ul li a{
     transition: .1s ease;
 }
 nav ul li a:hover{
-    color: blue;
+    color: red;
     /*transform: scale(1.1);*/
 }
 
@@ -247,23 +259,21 @@ nav ul li a:hover{
 
 
 /* ***ABOUT*** */
-.about-company{
-    height: 20vh;
+section.about {
     display: flex;
+    flex-direction: column;
+    align-items: center;
 }
-.about-company .image{
-    max-width: 100%;
-    height: auto;
+section.about .row{
+    padding: 20px;
 }
-/* .parallax{
-    height: 30vh;
-    background-image: url('../img/bulb-dark-hearts-170781.jpg');
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-attachment: fixed;
-} */
-
+section.about .container{
+    display: flex;
+    justify-content: space-around;
+}
+section.about *{
+    flex-basis: 45%;
+}
 /* ****Contact**** */
 
 .map iframe{
@@ -353,7 +363,6 @@ input:focus, textarea:focus{
     text-align: center;
     font-size: 1.3em;
     padding: 10px;
-    width: 150px;
     margin: 5px;
     border-radius: 5px;
     transition: all .5s;
@@ -381,7 +390,6 @@ input:focus, textarea:focus{
 }
 
 footer{
-    margin-top: 50px;
     color: white;
     text-align: center;
     font-weight: bold;
