--- a/css/main.css
+++ b/css/main.css
@@ -47,6 +47,19 @@ ul{
     z-index: 777;
     background: center no-repeat #fff;
 }
+#loader{
+     position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    padding-top: 50px;
+    text-align: center;
+    width: 100%;
+    height: 100%;
+    z-index: 777;
+    background: url('..img/loader-circle.gif') center no-repeat #fff;
+}
 .upper{
     text-transform: uppercase;
 }
