--- a/css/main.css
+++ b/css/main.css
@@ -48,7 +48,7 @@ ul{
     background: center no-repeat #fff;
 }
 #loader{
-     position: fixed;
+    position: fixed;
     top: 0;
     right: 0;
     bottom: 0;
@@ -58,7 +58,7 @@ ul{
     width: 100%;
     height: 100%;
     z-index: 777;
-    background: url('..img/loader-circle.gif') center no-repeat #fff;
+    background: url('../img/loader-circle.gif') center no-repeat #fff;
 }
 .upper{
     text-transform: uppercase;
